@@ -1,84 +1,0 @@
-{literal}
-<style>
-	#connections td.bytecount { text-align: right; }
-</style>
-{/literal}
-
-<table>
-<tr>
-    <th>Online Status:</th>
-    <td>
-    {if $userinfo.online_status == ONLINE_STATUS_ONLINE}
-    Online
-    {elseif $userinfo.online_status == ONLINE_STATUS_OFFLINE}
-    Offline
-    {else}
-    Unknown
-    {/if}
-    </td>
-</tr>
-<tr>
-	<th>User email:</th>
-	<td>{if $userinfo.email} {$userinfo.email} {else} Unknown e-mail {/if}</td>
-</tr>
-<tr>
-	<th>Username:</th>
-	<td>{$userinfo.username}</td>
-</tr>
-<tr>
-	<th>Account origin:</th>
-	<td>{$userinfo.account_origin}</td>
-</tr>
-<tr>
-	<th>User ID:</th>
-	<td>{$userinfo.user_id}</td>
-</tr>
-<tr>
-	<th>Registered on:</th>
-	<td>{$userinfo.reg_date|date_format:"%Y/%m/%d"}</td>
-</tr>
-<tr>
-	<th>Account Status:</th>
-	<td>{$userinfo.account_status_description}</td>
-</tr>
-</table>
-
-<div id="connections">
-{if $connections}
-
-<table>
-<tr>
-	<th>Date In</th>
-	<th>Date Out</th>
-	<th>Token status</th>
-	<th>MAC</th>
-	<th>IP</th>
-	<th>Hotspot ID</th>
-	<th>Hotspot IP</th>
-	<th>Incoming traffic</th>
-	<th>Outgoing traffic</th>
-</tr>
-{foreach from=$connections item=connection}
-<tr>
-	<td>{$connection.timestamp_in|date_format:"%Y-%m-%d %H:%M:%S"}</td>
-	<td>{$connection.timestamp_out|date_format:"%Y-%m-%d %H:%M:%S"}</td>
-	<td>{$connection.token_status_description}</td>
-	<td>{$connection.user_mac}</td>
-	<td>{$connection.user_ip}</td>
-	<td><acronym title="{$connection.name}">{$connection.node_id}</acronym></td>
-	<td>{$connection.node_ip}</td>
-	<td class="bytecount">{$connection.incoming}</td>
-	<td class="bytecount">{$connection.outgoing}</td>
-</tr>
-{/foreach}
-<tr>
-	<td colspan="7">Total</td>
-	<td>{$total.incoming}</td>
-	<td>{$total.outgoing}</td>
-</tr>
-</table>
-
-{else}
-No connections from this user yet!
-{/if}
-</div>
