@@ -6,6 +6,7 @@
 	* add BASEPATH to most files with require_once
 	* Added dependency checking class
 	* Don't show the admin menu if user does not have access
+	* Got rid of user_log_detailed.html, using stats.php instead
 
 2005-09-10 Francois Proulx <francois.proulx@gmail.com>
 	* Automatically redirect user to login form when trying to access admin
